@@ -1,4 +1,5 @@
 0.35
+ - Update mediawiki language codes.
 
 0.34 2024-11-10T17:03:15+01:00
  - Add tests.
